force-app/main/default/objects/Historico_de_pesquisa__c/Historico_de_pesquisa__c.object-meta.xml
<CustomObject>
    <label>Histórico de pesquisa</label>
    <nameField>
        <displayFormat>HTS-{0000}</displayFormat>
        <label>Histórico de pesquisa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de pesquisas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>