force-app/main/default/objects/Historico_de_pesquisa__c/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bairro</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>