force-app/main/default/objects/Historico_de_pesquisa__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cidade</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>