force-app/main/default/objects/Historico_de_pesquisa__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estado</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>