force-app/main/default/objects/Historico_de_pesquisa__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Logradouro</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>